fusion gitlab et github (moteur de rendu de base)

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea/
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+### Eclipse ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+!**/src/main/**/build/
+!**/src/test/**/build/
+
+### VS Code ###
+.vscode/
+
+### Mac OS ###
+.DS_Store
+
+
 .metadata/
 bin/
-.settings
 *.class
-.classpath
 .loadpath
 tmp/
 *.tmp
@@ -11,9 +50,6 @@ tmp/
 *.bak
 *.jar
 local.properties
-.factorypath
 src-gen/
 *.xml
 *.zip
-.idea/
-*.iml
