projet long menu

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <artifactId>jme3-niftygui</artifactId>
             <version>3.7.0-stable</version>
         </dependency>
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-desktop</artifactId>
+            <version>3.7.0-stable</version>
+        </dependency>
     </dependencies>
 
 </project>
