--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>jme3-jogg</artifactId>
             <version>3.7.0-stable</version>
         </dependency>
+        <dependency>
+            <groupId>org.jmonkeyengine</groupId>
+            <artifactId>jme3-effects</artifactId>
+            <version>3.7.0-stable</version>
+        </dependency>
     </dependencies>
 
     <build>
